--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <main class="container">
       <img class="cat-img" src="img/cat-0.jpg" alt="Picture of a cat" />
-      <p class="title">LETS HANG OUT TOGETHER</p>
+      <p class="title">SAYANG JOM DATING</p>
       <div class="buttons">
         <button type="button" class="btn btn--yes">Yes</button>
         <button type="button" class="btn btn--no">No</button>
